--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ layout: default
 
 <p>Hello there, and welcome to my homepage!<br><br>My name is &lt;your name here&gt;, and I am a &lt;designation&gt; at &lt;university name&gt;. You can add more details here, such as the most recent affiliation to a research group, etc.<br><br>
 
+I learned statistics, which is available at <a href="/bentley-statistics/">Statistics Bentley</a> tab
+
 I maintain a list of my publications, research projects and implementations under the <a href="/research/">Research</a> tab, and a list of other non-research projects under the <a href="/projects">Projects</a> tab. You may also check out my <a href="">Github profile.</a><br><br>
 
 To get a better insight on my life so far, you can have a look at my <a href="/cv">curriculum vitae</a>. I blog (although quite less frequently) and pin them down <a href="/blog">here</a>. Feel free to read a bit more <a href="/about">about me</a>.</p>
